Fix website on mobile

--- a/source/css/style.css.scss
+++ b/source/css/style.css.scss
@@ -288,6 +288,12 @@ nav.pagination {
 }
 
 @media all and (max-width: 1024px) {
+  body {
+    > header p, > #content, > footer p {
+      max-width:100vw;
+    }
+  }
+
   #content {
     display: block;
     .btn {
